Fix to use apis available to java 15 (#25)
Co-authored-by: Edison <l@l.l>